--- a/views/views.xml
+++ b/views/views.xml
@@ -165,6 +165,24 @@
             </form>
         </field>
       </record>
+      <record id="dashboard_form_view" model="ir.ui.view">
+        <field name="name">Dashboard Form</field>
+        <field name="model">board.board</field>
+        <field name="type">form</field>
+        <field name="arch" type="xml">
+            <form string="Dashboard">
+                <board style="1-2">
+                    <column>
+
+                    </column>
+                    <column>
+
+
+                    </column>
+                </board>
+            </form>
+        </field>
+    </record>
 
 
 
